# rust-supervisor

./: .gitignore  AGENTS.md  ASSUMPTIONS.md  CHANGELOG.md  Cargo.toml  FINAL_REPORT.md  LICENSE  README.md  README.zh.md  book.toml  deny.toml
.github/: copilot-instructions.md
.github/prompts/: commit-push.prompt.md
.github/workflows/: middle-gates.yml  nightly-gates.yml  pages.yml  shallow-gates.yml
.lingma/agents/: foundation-agent.md  us1-pipeline-agent.md  us2-meltdown-agent.md  us3-backoff-agent.md
.specify/: extensions.yml  feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/sync/: align-tasks.md  apply-report.json  apply-report.md  drift-report.json  drift-report.md  drift-supersession.md  proposals.json  proposals.md
.specify/templates/: checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
artifacts/: exemption-ticket.md  quality-gate-outcome.csv  release-record.json
artifacts/sbom/: rust-supervisor.cdx.json  rust-supervisor.spdx.json
artifacts/validation/: 002-config-schema-support.md  cargo-check.md  cargo-doc.md  cargo-fmt.md  cargo-package-list.md  cargo-publish-dry-run.md  cargo-test.md  coding-standard.md  documentation-ownership.md  maintainability.md  sbom.md
docs/: architecture.md  change-log.md  context-map.md  operations.md  product-roadmap.md  security.md
docs/adr/: 0001-build-own-supervisor-model.md  0002-task-factory-fresh-future.md  0003-supervisor-tree-lifecycle.md  0004-tokio-primitives-over-actor.md  0005-separate-state-and-event.md  0006-ban-snapshot-view-naming.md  0007-tracing-metrics-observability.md  0008-typed-error-policy-decision.md  0009-three-directory-architecture.md  0010-unix-only-ipc-cfg.md  0011-policy-pipeline-order.md  0012-centralized-config-rust-config-tree.md  README.md
docs/en/: index.md  parallel-governance.md  quality-gates.md
docs/zh/: index.md  parallel-governance.md  quality-gates.md
examples/: config_tree_supervisor.rs  diagnostic_replay.rs  observability_probe.rs  policy_failure_matrix.rs  restart_policy_lab.rs  runtime_control_story.rs  shutdown_tree.rs  supervisor_quickstart.rs  supervisor_tree_story.rs
examples/config/: supervisor.local.yaml  supervisor.template.yaml  supervisor.yaml
examples/demo/: args.rs  bootstrap.rs  main.rs  output.rs  runner.rs  scenario.rs  shutdown.rs
manual/: dashboard.md
manual/en/: SUMMARY.md  book.toml  configuration.md  dashboard.md  examples.md  getting-started.md  index.md  language.md  observability.md  operations-runbook.md  policies.md  quality-gates.md  runtime-control.md  shutdown.md  supervisor-tree.md  task-model.md
manual/theme/: left-aligned.css
manual/zh/: SUMMARY.md  book.toml  configuration.md  dashboard.md  examples.md  getting-started.md  index.md  language.md  observability.md  operations-runbook.md  policies.md  quality-gates.md  runtime-control.md  shutdown.md  supervisor-tree.md  task-model.md
scripts/: check-coding-standard.sh  check-maintainability.sh  check-tarball-content.sh  fill-quality-gate.sh  generate-attestation.sh  generate-sbom.sh  publish-pages.sh  release-check.sh  validate-release-matrix.sh  validate-sbom.sh  verify-attestation.sh  verify-msrv.sh  verify-sbom.sh
specs/001-create-supervisor-core/: analysis.md  data-model.md  findings.fixed.md  glossary.md  plan.md  quickstart.md  research-adoption-notes.md  research.md  spec.md  tasks.md
specs/002-config-schema-support/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-supervisor-dashboard/: analysis.md  data-model.md  findings.fixed.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-1-runtime-lifecycle-guard/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-2-real-shutdown-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-3-child-runtime-state-control/: analysis.md  data-model.md  findings.fixed.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-3-child-slot-control/: spec.md
specs/004-4-generation-fencing/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-agent-retrieval-rules/: spec.md
specs/005-1-failure-policy-reliability/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-2-work-role-defaults/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-1-platform-docs-ipc-security/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-2-release-supply-chain-gates/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-3-lifecycle-shutdown-realism/: data-model.md  plan.md  quickstart.md  research.md  spec.md  (+2 more)
src/: lib.rs
tests/: add_child_transaction_test.rs  backpressure_strategy_test.rs  chaos_suite.rs  concurrent_restart_test.rs  correlation_tracking_test.rs  dashboard_config_test.rs  dashboard_performance_test.rs  dashboard_protocol_shape_test.rs  dashboard_registration_heartbeat_test.rs  dashboard_runtime_startup_test.rs  dashboard_snapshot_test.rs  dashboard_state_test.rs  dashboard_stream_test.rs  golden_yaml_consistency_test.rs  ipc_security_integration.rs  join_timeout_test.rs  lifecycle_integration.rs  policy_budget_waveform_test.rs  policy_critical_optional_test.rs  policy_fairness_probe_test.rs  policy_group_isolation_test.rs  shutdown_orphan_test.rs  soak_suite.rs  supervisor_backoff_jitter_distribution.rs  supervisor_cancel_stop_priority.rs  supervisor_cold_start_and_hot_loop.rs  supervisor_concurrent_restart_throttle.rs  supervisor_meltdown_group_isolation.rs  supervisor_meltdown_lead_scope.rs  supervisor_pipeline_full_integration.rs  supervisor_pipeline_order.rs  supervisor_restart_limit_usage.rs  typed_event_coverage_test.rs  work_role_defaults_integration.rs
tmp/: 004-ob.md  004-sync-to-dashboard-ui.md  supervisor-dashboard-plan.md
(+340 files in other folders)
